[project]
name = "matter-api-client"
description = "Matter's API Client Library"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Tomer Sasson", email = "tomer@thisismatter.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "aiohttp==3.8.4",
    "orjson==3.8.11",
    "matter-exceptions>=1.1.0",
    "requests==2.28.2",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/Matter-Tech/matter-api-client#readme"
Issues = "https://github.com/Matter-Tech/matter-api-client/issues"
Source = "https://github.com/Matter-Tech/matter-api-client"

[tool.hatch.version]
path = "matter_api_client/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    #"matter-api-client",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-httpserver",
    "black",
    "mypy",
    "ruff",
    "python-dotenv",
]

[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=matter_exceptions --cov=tests {args}"
no-cov = "test --no-cov {args}"
typing = "mypy --install-types --non-interactive {args:matter_exceptions tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
lint = [
  "style",
]

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "matter_api_client/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under=80

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-x"
filterwarnings = ["error"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
